add todo service and paging and controller advice

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,11 +5,11 @@ server.servlet.context-path=/
 server.port=8080
 
 #set jsp path - src/main/resources/META-INF/resources/WEB-INF/views
-spring.mvc.view.prefix=/WEB-INF/views/
-spring.mvc.view.suffix=.jsp
+#spring.mvc.view.prefix=/WEB-INF/views/
+#spring.mvc.view.suffix=.jsp
 
 #set mybatis mapper xml location
-mybatis.mapper-locations=classpath:/mapper/**/*.xml
+#mybatis.mapper-locations=classpath:/mapper/**/*.xml
 
 #set database config
 spring.datasource.url=jdbc:postgresql://localhost:5432/zzz_database_2024
@@ -22,6 +22,7 @@ spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
 #set the package logging level: logging.level.{package_name}={logging_level}
+logging.level.org.zerock.mallapi=debug
 
 #do not log spring banner when server's starting 
 spring.main.banner-mode=off
