--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,9 +17,10 @@ spring.datasource.username=iyf
 spring.datasource.password=iyf
 spring.datasource.driver-class-name=org.postgresql.Driver
 
-#set watch mode for formatted SQL
+#set watch mode for formatted SQL with binding parameter
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.format_sql=true
+logging.level.org.hibernate.orm.jdbc.bind=trace
 
 #set the package logging level: logging.level.{package_name}={logging_level}
 logging.level.org.zerock.mallapi=debug
